--- a/ChatClient/Styles.xaml
+++ b/ChatClient/Styles.xaml
@@ -2,7 +2,9 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:ChatClient">
 
-    <local:MessageSourceConverter x:Key="messageSourceConverter"/>
+    <local:MessageColorConverter x:Key="messageColorConverter"/>
+    <local:MessageHorizontalAlignmentConverter x:Key="messageHorizontalAlignmentConverter"/>
+    <local:HideOwnNameInMessageConverter x:Key="hideOwnNameInMessageConverter"/>
     <local:DateTimeConverter x:Key="dateTimeConverter"/>
     <BooleanToVisibilityConverter x:Key="booleanToVisibilityConverter"/>
 
@@ -47,6 +49,8 @@
         <Setter Property="Margin" Value="2, 2, 2, 6"/>
         <Setter Property="BorderBrush" Value="Black"/>
         <Setter Property="BorderThickness" Value="1"/>
+        <Setter Property="Padding" Value="2"/>
+        <Setter Property="CornerRadius" Value="2"/>
     </Style>
 
     <Style x:Key="borderRoom" TargetType="Border">
